feat(app): app finished

--- a/microfrontends/mf_app/starred.html
+++ b/microfrontends/mf_app/starred.html
@@ -12,7 +12,7 @@
     />
     <link
       rel="stylesheet"
-      href="./src/styles/page-home.css"
+      href="./src/styles/page-starred.css"
     />
     <title>MF_App</title>
   </head>
@@ -30,7 +30,7 @@
       <main class="main">
         <iframe
           class="main__iframe"
-          src="http://localhost:3002/videos"
+          src="http://localhost:3002/starred"
           frameborder="0"
         ></iframe>
       </main>
