--- a/microfrontends/mf_drawer/index.html
+++ b/microfrontends/mf_drawer/index.html
@@ -6,7 +6,6 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-
     <link
       rel="preconnect"
       href="https://fonts.googleapis.com"
@@ -20,7 +19,6 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
       rel="stylesheet"
     />
-
     <link
       rel="stylesheet"
       href="./src/styles/global.css"
@@ -29,7 +27,6 @@
       rel="stylesheet"
       href="./src/styles/index.css"
     />
-
     <title>MF_Drawer</title>
   </head>
 
@@ -40,17 +37,27 @@
       alt="Logo do Youtube"
     />
 
-    <nav class="nav">
+    <nav
+      class="nav"
+      id="nav"
+    >
       <a
         class="nav__anchor"
-        href=""
+        data-route="/"
+        href="#"
         >Vídeos</a
       >
       <a
         class="nav__anchor"
-        href=""
+        data-route="/starred"
+        href="#"
         >Favoritos</a
       >
     </nav>
+
+    <script
+      type="module"
+      src="./src/scripts/page-nav.ts"
+    ></script>
   </body>
 </html>
