--- a/microfrontends/mf_videos/videos.html
+++ b/microfrontends/mf_videos/videos.html
@@ -39,8 +39,9 @@
 
   <body class="body">
     <form
-      action=""
+      method="get"
       class="form"
+      id="videos-form"
     >
       <label
         for=""
@@ -51,6 +52,8 @@
           type="text"
           placeholder="Pesquise por um vídeo"
           class="search-field__input"
+          name="q"
+          value=""
         />
       </label>
 
