--- a/microfrontends/mf_videos/starred.html
+++ b/microfrontends/mf_videos/starred.html
@@ -1,14 +1,49 @@
 <!doctype html>
+
 <html lang="en">
   <head>
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
     <title>Favoritos</title>
+    <link
+      rel="stylesheet"
+      href="./src/styles/global.css"
+    />
+    <link
+      rel="stylesheet"
+      href="./src/styles/index.css"
+    />
+    <link
+      rel="stylesheet"
+      href="./src/styles/videos.css"
+    />
   </head>
-  <body>
-    <h1>Favoritos</h1>
+
+  <body class="body">
+    <ul
+      class="list"
+      id="videos-list"
+    ></ul>
+
+    <script
+      type="module"
+      src="./src/scripts/page-starred.ts"
+    ></script>
   </body>
 </html>
